objects/Account_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Note_Legacy_ID__c</fullName>
        <label>Account Note Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specific_Notes__c</fullName>
        <inlineHelpText>Notes specific to this account (customer) e.g. progress on implementing main note</inlineHelpText>
        <label>Account Specific Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Optima_Note_Account_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optima_Note__c</fullName>
        <label>Optima Note</label>
        <referenceTo>Optima_Note__c</referenceTo>
        <relationshipName>Optima_Note_Account_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Optima_Note__r.Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Account Note</label>
    <nameField>
        <displayFormat>ONA-{0}</displayFormat>
        <label>Note Account Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>